k8s/service_hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunbit-pos-api-svc
spec:
  selector:
    app: pos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP # We use ClusterIP because we expose it via Ingress (ALB)
